--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,39 @@
 
 /* CSS Document */
 
+
+/*-------- Accessibility ---------*/
+
+*:focus {
+    outline: 0;
+    box-shadow: 0 0 10px #EB0486;
+    border-color: #EB0486;
+}
+
+a:focus {
+    font-weight: bold;
+}
+
+
+/* --Udacity Accessibility Rob Dodson's code skip-link--
+Source:  https://webaim.org/techniques/skipnav/ 
+
+*/
+
+.skip-links {
+    position: absolute;
+    top: -40px;
+    left: 0;
+    background: #bf1722;
+    color: white;
+    padding: 8px;
+    z-index: 100;
+}
+
+.skip-links:focus {
+    top: 0;
+}
+
 body,
 td,
 th,
@@ -149,7 +182,7 @@ nav h1 a {
 .filter-options {
     width: 100%;
     height: 75px;
-    background-color: #3397DB;
+    background-color: #5390bf;
     align-items: center;
 }
 
@@ -213,10 +246,10 @@ nav h1 a {
 }
 
 #restaurants-list li h1 {
-    color: #f18200;
+    color: #060404;
     font-family: Arial, sans-serif;
-    font-size: 14pt;
-    font-weight: 200;
+    font-size: 13pt;
+    font-weight: bold;
     letter-spacing: 0;
     line-height: 1.3;
     margin: 20px 0 10px;
@@ -229,7 +262,7 @@ nav h1 a {
 }
 
 #restaurants-list li a {
-    background-color: orange;
+    background-color: #356686;
     border-bottom: 3px solid #eee;
     color: #fff;
     display: inline-block;
@@ -283,11 +316,15 @@ nav h1 a {
     width: 100%;
 }
 
+#footer a {
+    color: #0275d8;
+}
+
 #restaurant-name {
-    color: #f18200;
+    color: #060404;
     font-family: Arial, sans-serif;
     font-size: 20pt;
-    font-weight: 200;
+    font-weight: bolder;
     letter-spacing: 0;
     margin: 15px 30px 30px;
     text-transform: uppercase;
@@ -301,14 +338,20 @@ nav h1 a {
 
 #restaurant-address {
     font-size: 12pt;
+}
+
+#restaurants-list {}
+
+#restaurant-cuisine,
+#restaurant-address,
+#restaurant-hours {
     margin: 10px 10px 0 10px;
 }
 
 #restaurant-cuisine {
-    font-size: 12pt;
+    font-size: 20pt;
     font-weight: 300;
     letter-spacing: 10px;
-    text-align: center;
     text-transform: uppercase;
     max-width: 50%;
 }
@@ -327,7 +370,7 @@ nav h1 a {
 }
 
 #reviews-container h2 {
-    color: #f58500;
+    color: #060404;
     font-size: 24pt;
     font-weight: 300;
     letter-spacing: -1px;
@@ -355,10 +398,6 @@ nav h1 a {
     margin: 0 0 10px;
 }
 
-#restaurant-hours {
-    margin: 10px 10px 0 10px;
-}
-
 #restaurant-hours td {
     color: #666;
 }
@@ -380,8 +419,9 @@ nav h1 a {
     nav h1 a {
         font-size: 20px;
     }
-    #map {
-        height: 200px;
+    #restaurant-cuisine,
+    #restaurant-address,
+    #restaurant-hours {
+        margin: 20px;
     }
-    #restaurants-list {}
 }
